--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
     color: #eee;
     text-rendering: optimizeSpeed;
     zoom: 1; 
-    -moz-transform: scale(1); 
+    -moz-transform: scale(.9); 
     -moz-transform-origin: 0 0;
 }
 
@@ -236,6 +236,16 @@ button:hover {
     padding: 1.5rem;
 }
 
+
+.servicecontainer hr{ 
+    margin: auto;
+  }
+
+  .left-tab-1-content hr{
+    margin: auto;
+  }
+  
+
 .SECTION2P1 {
     color: #fdc83c !important;
     font-size: 20px;
@@ -258,7 +268,6 @@ button:hover {
     border-width: 0;
     color: #eee;
     background-color: #eee;
-    margin: auto;
   }
 
 
@@ -327,6 +336,7 @@ button:hover {
     width: 200px;
     height: fit-content;
     padding-bottom: 4rem;
+    max-height: 320px;
 }
 
 .left-tab-1 h4 {
@@ -822,7 +832,7 @@ li img {
         position: absolute;
         text-align: center;
         display: flex;
-        justify-content: center;
+        justify-content:    center;
         align-content: center;
         flex-direction: column;
         width: 100%;
@@ -1315,12 +1325,31 @@ font-size: 50px;
     margin-top: 5px;
 }
 
-#unete-hero {
-    transform: translateY(-150px);
+#gradient-unete {
+    background-size: cover;
+    background-position: center;
+    position: absolute;
+    background-image: url(./img/gradient.png);
+    height: 100vh;
+    width: 100%;
 }
 
-#gradient-unete {
-    z-index: 1;
+#unete{
+    height: 100vh;
+    position: relative;
+    background-image: url(./img/little-girl.jpg);
+    background-size: cover;
+    background-position: center;
+
+}
+
+#eventos{
+    height: 85vh;
+    position: relative;
+    background-image: url(./img/eventos-hero.jpg);
+    background-size: cover;
+    background-position: center;
+
 }
 
 #unete1{
@@ -1384,7 +1413,7 @@ font-size: 50px;
 }
 
 .bottom-left-iglesias-header{
-    background-color: #ad282c;
+    background-color: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -1453,17 +1482,17 @@ font-size: 50px;
 
 .option-church-content{
     display: grid;
-    grid-template-columns: 4fr 4fr 1fr;
+    grid-template-columns: 3fr 4fr 1fr;
     gap: 2rem;
     height: 150px;
-    padding: 1.5rem;
+    padding: 2rem;
     margin: auto;
     align-items: center;
     justify-content: center;
 }
 
 .option-church-content p1{
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 600;
 }
 
@@ -1471,12 +1500,12 @@ font-size: 50px;
 .option-church-content p3{
     font-size: 14px;
     font-weight: 300;
-color: grey;
+    color: grey;
 }
 
 .option-church-pic{
     display: flex;
-    background-image: url(./img/108552103_4156975764374527_7018875179589582913_n.jpg);
+    background-image: url(./img/church.jpg);
     background-size: cover;
     background-position: center;
     border-radius: 20px;
@@ -1497,6 +1526,9 @@ color: grey;
 
 #top-geolocator{
     background-image: none;
+    z-index: 10;
+    background-color: white;
+    max-height: 10px;
 }
 
 #top-geolocator img{
@@ -1505,5 +1537,249 @@ width: 10px;
 
 #church-location-identifier{
 justify-content: left;
-padding-left: 10rem;
+padding-left: 4rem;
+z-index: 10;
+font-weight: 800;
+}
+
+#church-location-identifier p2{
+    font-weight: 600;
+    }
+
+.pawtucket-hero{
+    background-image: url(./img/pawtucket-hero.jpg);
+    background-repeat: no-repeat;
+    background-size: 1600px;
+    background-position: 50% 70%;
+    height: 80vh;
+    position: relative;
+}
+
+
+.pawtucket-gradient{
+    background-image: url(./img/gradient.png);
+    background-size:cover;
+    height: 80vh;
+    opacity: .4;
+
+}
+
+.pawtucket-text {
+    width: 80%;
+    position: absolute;
+    bottom: 0%;
+    z-index: 100;
+    margin-left: 3rem;
+    padding: 1rem;
+}
+
+.pawtucket-text h1{
+    font-size: 34px;
+    margin-bottom: -.5rem;
+}
+
+.pawtucket-text p1{
+    font-size: 60px;
+    font-weight: 600;
+}
+
+#church-tabs {
+    display: grid;
+    gap: 2rem;
+    grid-template-columns: 3fr 3fr 2fr; 
+    position: relative;
+    width: 90%;
+    margin: auto;
+    padding-left:0rem;
+    padding-right: 0rem;
+    margin-top: 4rem;
+}
+
+.right-tab-1-church{
+    background-size:cover;
+    background-position-x: 0px; /*find better way to nest image in div*/
+        background-position-y: 0px;
+        background-position: 10% 100%;
+        background-repeat: no-repeat;
+        min-height: 350px;
+        max-height: 350px;
+        border-radius: 10px;
+        word-break: break-all;
+        position: relative;
+        box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2), 0 6px 100px 0 rgba(0, 0, 0, 0.2);
+}
+
+.church-text-tab{
+    padding: 2rem;
+    bottom: 0;
+    position: absolute;
+}
+
+#church-tab-1 {
+    background-image:url(./img/108552103_4156975764374527_7018875179589582913_n.jpg) ;
+}
+
+#church-tab-2 {
+    background-image:url(./img/155318571_5193840467354713_4077255579275099475_n.jpg) ;
+}
+
+#church-tab-3 {
+    background-image:url(./img/108552103_4156975764374527_7018875179589582913_n.jpg) ;
+}
+
+#church-tab-4 {
+    background-image:url(./img/108552103_4156975764374527_7018875179589582913_n.jpg) ;
+}
+
+#left-tab-church {
+    background-color:white;
+    color: #181818;
+    border-radius: 20px;
+    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 100px 0 rgba(0, 0, 0, 0.1);
+    width: auto;
+    min-height:700px;
+    padding-bottom: 4rem;
+    grid-column: 3 ;
+    grid-row: 1 / 4;
+    display: flex;
+    flex-direction: column;
+    padding: 2.5rem;
+    gap: .5rem;
+}
+
+
+#left-tab-church h2 {
+    font-size: 28px;
+    font-weight: 600;
+    text-align: left;
+    }
+
+.new-hr {
+    padding: 0;
+    margin: 0;
+    margin-top:0;
+}
+
+#left-tab-church h4 {
+    font-size: 24px;
+    font-weight: 600;
+    text-align: left;
+    }
+
+#left-tab-church p2 {
+    color: red;
+    font-weight: 400;
+    text-align: left;
+    }
+
+.left-tab-1-content {
+    margin: 2rem;
+    padding-left: 1.7rem;
+    padding-right: 1.7rem;
+    max-height: 5000px;
+}
+
+#church-about{
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    z-index: 5;
+    background-color: #ebebeb;
+}
+
+#church-about-pic{
+    width: 1000px;
+    height:auto;
+    background-image: url(./img/church-pop-2.jpg); 
+    background-size: cover;
+    background-position: center;
+    border-radius: 0px 10px 10px 0px;
+}
+
+#church-about-text{
+    background-color: transparent;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    justify-content: center;
+    color: #181818;  
+    padding-right: 0rem;
+    padding: 4rem;
+    width: 60%;
+}
+
+.eventos-grid{
+    height: fit-content;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-rows: 35rem;
+    position: relative;
+    background-color: white;
+    padding: 4rem;
+    gap: 2rem;
+}
+
+.event{
+    width: auto;
+    height: 550px;
+    color: #181818;
+    display: flex;
+    flex-direction: column;
+    justify-content:end;
+}
+
+.event-pics{
+    background-color: #181818;
+    width: 100%;
+    height: 100%;
+    background-image: url(./img/gradient2.png);
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 100px 0 rgba(0, 0, 0, 0.1);
+
+}
+
+.event-text{
+    display: flex;
+    flex-direction: column;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    gap: 5px;
+}
+
+.event p3 {
+font-size: 30px;
+}
+
+.event p1 {
+    font-size: 14px;
+}
+
+.event p2 {
+    font-size: 14px;
+    line-height:normal;
+}
+
+#event-two{
+    background-image: url(./img/gradient2.png);
+
+}
+
+#event-three{
+    background-image: url(./img/gradient2.png);
+}
+
+#event-four{
+    background-image: url(./img/gradient2.png);
+}
+
+#event-five{
+    background-image: url(./img/gradient2.png);
+}
+
+#event-six{
+    background-image: url(./img/gradient2.png);
 }
